# service-mcp-server

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  health.py
app/services/: __init__.py  asset.py  asset_model.py  realm.py  rule.py
app/utils/: __init__.py  asset_attribute_model.py
services/: openremote_service.py
templates/: index.html
